Changes for 2.2.3rc1

New features:

Bug fixes:
..F....... [ZBX-7756] fixed SQL error in Monitoring > Maps page (Ivo)
A.F....... [ZBX-7708] fixed trigger prototype error message and trigger form default description value (Oleg)
..F....... [ZBX-7739] removed unused label in screen configuration page when no elements exist (Eduard)
..F....... [ZBX-7651] fixed item configuration flexible interval adding (Eduard)
..F....... [ZBX-7630] fixed latest issues link on monitoring events (Eduard)

--------------------------------------------------------------------------------
Changes for 2.2.2

2.2.2rc3 was released as 2.2.2 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.2rc3

Bug fixes:
........S. [ZBX-7521] fixed possible crash because of item value type change handling in value cache (wiper)
.......PS. [ZBX-7698] fixed closing a connection to the database when database server is unavailable (Sasha)
........S. [ZBX-7758] fixed server crash when processing low-level discovery triggers prototypes (Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.2rc2

Bug fixes:
..F....... [ZBX-6296] fixed macros in item names not being resolved in simple graph titles (Eduard)
..F....... [ZBX-7743] fixed not being able to save the user or profile form if PHP gettext is unavailable (Eduard)
A......... [ZBX-7693] fixed user media validation (Eduard)
A......... [ZBX-7693] fixed admin user being able to update media for other users (Eduard)
........S. [ZBX-7711] fixed memory leak in vmware collector (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.2rc1

New features:
.......PS. [ZBX-7649] synchronize ICMP checks based on item interface. This should reduce the number of fping invocations in most cases (wiper)